--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,1 +1,6 @@
-@import 'navbar';
+// Import your components CSS files here.
+@import "alert";
+@import "avatar";
+@import "navbar";
+@import "hero";
+
