--- a/app/views/comedians/_navbar.html.erb
+++ b/app/views/comedians/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "#", class: "navbar-brand" do %>
+  <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "https://www.pinclipart.com/picdir/big/19-195101_clipart-jester-hat-transparent-png-download.png" %>
   <% end %>
 
@@ -10,17 +10,11 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <%= link_to "Home", "#", class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Messages", "#", class: "nav-link" %>
-      </li>
       <li class="nav-item dropdown">
         <%= image_tag "https://atos.net/wp-content/uploads/2017/05/Profile_gray.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to "Action", "#", class: "dropdown-item" %>
-          <%= link_to "Another action", "#", class: "dropdown-item" %>
+          <%= link_to "Edit profile", "#", class: "dropdown-item" %>
+          <%= link_to "Log out", "#", class: "dropdown-item" %>
         </div>
       </li>
     </ul>
@@ -28,9 +22,9 @@
 </div>
 
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://comicvine1.cbsistatic.com/uploads/original/0/9241/535009-0003.jpg);">
+<div class="banner">
   <div class="container">
-    <h1>Welcome to the </h1> <strong>funniest website</strong> on Earth!</h1>
-    <p>Change your life and learn to code at one of our campuses around the world.</p>
+    <h1><strong>Welcome to the funniest website on Earth </strong></h1> 
+    <h4>Change your life by hiring <strong>the most outrageous, ridiculously brilliant comedians </strong>from Gotham City</h4>
   </div>
 </div>
