--- a/app/views/comedians/index.html.erb
+++ b/app/views/comedians/index.html.erb
@@ -1,12 +1,12 @@
-<div class="my-container">
-<% @comedians.each do |comedian| %>
-<ul>
-  <li><%= comedian.name %></li>
-  <li><%= comedian.age %></li>
-  <li><%= comedian.content %></li>
-  <li><%= link_to  "Delete #{comedian.name}", comedian_path(comedian), method: :delete, data: { confirm: "Are you sure?" } %></li>
-</ul>
-<% end %>
+<div class="comedians-container">
+  <% @comedians.each do |comedian| %>
+  <ul>
+    <li><%= comedian.name %></li>
+    <li><%= comedian.age %></li>
+    <li><%= comedian.content %></li>
+    <li><%= link_to  "Delete #{comedian.name}", comedian_path(comedian), method: :delete, data: { confirm: "Are you sure?" } %></li>
+  </ul>
+  <% end %>
 </div>
 
 
