--- a/app/views/comedians/_navbar.html.erb
+++ b/app/views/comedians/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag "https://www.pinclipart.com/picdir/big/19-195101_clipart-jester-hat-transparent-png-download.png" %>
+    <%= image_tag "https://i.dlpng.com/static/png/6364031_preview.png" %>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
