--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -5,7 +5,7 @@
     margin: 40px auto;
     width: 100%;
     font-weight: bolder;
-    input {
+    .submit-button {
         color: white;
         font-weight: bold;
     }
