--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar {
   position: sticky;
   top: 0;
-  background-color: $forestgreen;
+  background-color: $darkpurple;
 }
 
 .navbar-lewagon {
