--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -15,4 +15,6 @@ $softpink: #D4A0A7;
 $darkwhite: #E3E3E3; 
 $coolgrey: #898989;
 $rebelviolet: #D6B1FB;
+$herotitlepurple: #3c096c;
+$darkpurple: #53117a;
   
