--- a/app/views/comedians/_navbar.html.erb
+++ b/app/views/comedians/_navbar.html.erb
@@ -23,8 +23,8 @@
 
 
 <div class="banner">
-  <div class="container">
-    <h1><strong>Welcome to the funniest website on Earth </strong></h1> 
-    <h4>Change your life by hiring <strong>the most outrageous, ridiculously brilliant comedians </strong>from Gotham City</h4>
+  <div class="container col-12">
+    <h1>Welcome to the funniest website on DC Universe</h1> 
+    <h4>Change your life by hiring the most outrageous, ridiculously brilliant comedians from Gotham City</h4>
   </div>
 </div>
