created review model and its controller plus the router

--- a/app/views/comedians/_navbar.html.erb
+++ b/app/views/comedians/_navbar.html.erb
@@ -24,7 +24,7 @@
 
 <div class="banner">
   <div class="container col-12">
-    <h1>Welcome to the funniest website on DC Universe</h1> 
+    <h1>Welcome all freaks to Chuckletown</h1> 
     <h4>Change your life by hiring the most outrageous, ridiculously brilliant comedians from Gotham City</h4>
   </div>
 </div>
