comedian cards from homepage can now flip

--- a/app/assets/stylesheets/components/_hero.scss
+++ b/app/assets/stylesheets/components/_hero.scss
@@ -1,5 +1,5 @@
 .banner {
-    background-image: url("https://mightymega.com/wp-content/uploads/2013/09/28_reasons_gotham_city_l.jpg");
+    background-image: url("banner-gotham-city.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
