js click to flip instead of hover

--- a/app/assets/stylesheets/components/_flip-card.scss
+++ b/app/assets/stylesheets/components/_flip-card.scss
@@ -1,6 +1,6 @@
 .flip-card-container {
-  width: 400px;
-  height: 636px;
+  width: 300px;
+  height: 500px;
   perspective: 1000px;
 }
 .flip-card {
@@ -10,9 +10,10 @@
   transition: transform 1s;
   transform-style: preserve-3d;
 }
-.flip-card-container:hover .flip-card {
+.flip-card-container.flip .flip-card {
   transform: rotateY(180deg); /* <=>  rotateY(.5turn) */
 }
+
 /* Position the front and back side */
 .flip-card-front, .flip-card-back {
   position: absolute;
@@ -25,31 +26,26 @@
   align-items: center;
   /* border-radius: 0.5rem; */
 }
-.flip-card-front {
-  background-color: #333;
-  color: #fff;
-}
-.flip-card-back {
-  background-color: $rebelviolet;
-  color: #fff;
-  transform: rotateY(180deg);
-}
 
 .flip-card-front img {
   width: 100%;
   height: 100%;
-  /* border-radius: 0.5rem; */
+  border-radius: 1rem;
 }
+
+.flip-card-back {
+  background-color: $rebelviolet;
+  color: #fff;
+  align-items: center;
+  transform: rotateY(180deg);
+  border-radius: 1rem;
+}
+
 .flip-card-back p {
   text-align: center;
   margin: 1rem;
   font-size: 1.4rem;
   line-height: 1.5rem;
 }
-.flip-card-back p span {
-  display: block;
-  font-size: 1rem;
-  font-style: italic;
-  font-weight: bold;
-  margin-top: 1.25rem;
-}
+
+
