minor changes to the cards (centering / positioning)

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,13 +1,13 @@
 // Specific CSS for your home-page
 .comedians-container {
-    margin: 20px;
-    background-color: $darkwhite;
+    margin: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 20px;
+    grid-gap: 35px;
+    justify-items: center;
     li, a {
         text-decoration: none;
         list-style-type: none;
-        color: $coolgrey;
+        color: white;
     }
 }
