--- a/app/assets/stylesheets/components/_flip-card.scss
+++ b/app/assets/stylesheets/components/_flip-card.scss
@@ -24,7 +24,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border-radius: 0.5rem; */
 }
 
 .flip-card-front img {
@@ -33,19 +32,28 @@
   border-radius: 1rem;
 }
 
-.flip-card-back {
-  background-color: $rebelviolet;
-  color: #fff;
-  align-items: center;
+
+.flip-card-back { 
+  background-color: $forestgreen;
   transform: rotateY(180deg);
   border-radius: 1rem;
+  ul {
+    padding: 0;
+    margin: 10px; 
+  }
+  li {
+    text-align: center;
+    vertical-align: text-bottom;
+    font-size: 18px;
+  }
+  img {
+    width: 240px;
+    height: 400px;
+    border-radius: 0.3rem;
+    border: 1px solid white;
+  }
 }
 
-.flip-card-back p {
-  text-align: center;
-  margin: 1rem;
-  font-size: 1.4rem;
-  line-height: 1.5rem;
-}
+
 
 
