proper collapse sidebar and brand new logo - I am back :))

--- a/app/views/comedians/_navbar.html.erb
+++ b/app/views/comedians/_navbar.html.erb
@@ -1,7 +1,12 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag "joker.png" %>
-  <% end %>
+  <div class="navbar-left-side mt-auto">
+    <%= link_to root_path, class: "navbar-brand" do %>
+      <%= image_tag "joker.png" %>
+    <% end %>
+    <button id="sidebarCollapse" class="sidebar-button">
+      <%= image_tag "logo.png" %>
+    </button>
+  </div>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
