--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,15 @@
 
   <body>
     <%= render 'shared/flashes' %>
-    <%= render "comedians/navbar" %>
-    <% if controller_name = 'comedians' && action_name == 'index' %>
-      <%= render "comedians/banner" %>
-    <% end %>
-    <%= yield %>
+    <div class="wrapper">
+      <%= render "comedians/sidebar" %>
+      <div id="content">
+        <%= render "comedians/navbar" %>
+        <% if controller_name = 'comedians' && action_name == 'index' %>
+          <%= render "comedians/banner" %>
+        <% end %>
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
