--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,24 @@
   position: sticky;
   top: 0;
   z-index: 1;
+    .navbar-left-side {
+      display: flex;
+      justify-content: space-between;
+      a {
+       margin: 0;
+      }
+    }
+    .sidebar-button {
+      background-color: transparent;
+      border: 0 none;
+      outline: none;
+      img {
+        height: 70px;
+        border: none;
+      }
+    }
 }
+
 
 .navbar-lewagon {
     justify-content: space-between;
@@ -14,7 +31,8 @@
   }
 
   .navbar-lewagon .navbar-brand img {
-    width: 40px;
+    width: 55px;
+    height: 50px;
   }
 
   .navbar-lewagon-white {
