--- a/app/views/comedians/show.html.erb
+++ b/app/views/comedians/show.html.erb
@@ -4,9 +4,10 @@
     <li><%= cl_image_tag @comedian.photo.key, width: 400, crop: :fill if @comedian.photo.attached? %></li>
     <li><%= @comedian.content %></li>
     <li> Average rating: <%= @comedian.average_rating.to_f.round(2) %> / 5 </li>
+    <%= render 'bookings/new' %>
     <li><% @comedian.reviews.reverse_each do |review|%></li>
     <div class="d-flex justify-content-between">
-        <li><% review.rating.to_i.times do  %><i class="fas fa-star" id="voted"></i> <% end %> <% (5 - review.rating.to_i).times do  %><i class="fas fa-star" id="didnt-vote"></i> <% end %> </li> 
+        <li><% review.rating.to_i.times do  %><i class="fas fa-star" id="voted"></i> <% end %> <% (5 - review.rating.to_i).times do  %><i class="fas fa-star" id="didnt-vote"></i> <% end %> </li>
         <li><%= review.comment.empty? ? content_tag(:em, "This user left no comments.") : review.comment %></li>
     </div>
     <li><% end %></li>
