--- a/app/views/components/_search-bar.html.erb
+++ b/app/views/components/_search-bar.html.erb
@@ -1,6 +1,6 @@
 <div class="form-inline">
   <%= form_tag comedians_path, method: :get, style:"width:100%" %>
-  <%= text_field_tag :query, params[:query], results: results, class: 'form-control', style:"width:40%", placeholder: 'Find your joker' %><%=  submit_tag 'Search', class: 'btn btn-success' %>
+  <%= text_field_tag :query, params[:query], class: 'form-control', style:"width:40%", placeholder: 'Find your joker' %><%=  submit_tag 'Search', class: 'btn btn-success' %>
 </div>
 
-<!-- :query, params[:query] -->
+<!-- :query, params[:query], results: results -->
