need to fix this mapbox issue but getting there

--- a/app/views/comedians/_form.html.erb
+++ b/app/views/comedians/_form.html.erb
@@ -4,6 +4,7 @@
       <%= f.input :name %>
       <%= f.input :age %>
       <%= f.input :content %>
+      <%= f.input :address %>
       <%= f.input :photo, as: :file %>
       <div class="d-flex justify-content-between">
         <%= f.submit 'Bring your funny persona into this world', class: "submit-button btn btn-danger" %>
