--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import 'mapbox-gl/dist/mapbox-gl';
 // *** to have a nice lookig datetime format on simple_form_for ***
 @import "tempusdominus-bootstrap-4/src/sass/tempusdominus-bootstrap-4";
 
