--- a/app/views/comedians/show.html.erb
+++ b/app/views/comedians/show.html.erb
@@ -1,18 +1,28 @@
-<ul class="comedian-page m-4">
-    <li><%= @comedian.name  %></li>
+<div class="comedian-page row justify-content-left" style="margin: 30px 100px 100px 100px">
+  <ul class="m-3 p-0">
+    <h3><%= @comedian.name  %></h3>
     <li><%= @comedian.age %></li>
     <li><%= cl_image_tag @comedian.photo.key, width: 400, crop: :fill if @comedian.photo.attached? %></li>
     <li><%= @comedian.content %></li>
+    <li><%= @comedian.address %></li>
+    <%= render 'map' %>
     <li> Average rating: <%= @comedian.average_rating.to_f.round(2) %> / 5 </li>
+  </ul>
     <%= render 'bookings/new' %>
-    <li><% @comedian.reviews.reverse_each do |review|%></li>
-    <div class="d-flex justify-content-between">
-        <li><% review.rating.to_i.times do  %><i class="fas fa-star" id="voted"></i> <% end %> <% (5 - review.rating.to_i).times do  %><i class="fas fa-star" id="didnt-vote"></i> <% end %> </li>
-        <li><%= review.comment.empty? ? content_tag(:em, "This user left no comments.") : review.comment %></li>
+  <ul class="col-6">
+    <% @comedian.reviews.reverse_each do |review|%>
+      <div class="d-flex justify-content-between mt-4 mb-4">
+        <li><% review.rating.to_i.times do  %><i class="fas fa-star" id="voted"></i> <% end %> <% (5 - review.rating.to_i).times do  %><i class="fas fa-star" id="didnt-vote"></i> <% end %></li>
+        </br><li><%= review.comment.empty? ? content_tag(:em, "This user left no comments.") : review.comment %></li>
+      </div>
+    <% end %>
+  </ul>
+  <div class="col-9 justify-content-center">
+    <div class="buttons d-flex justify-content-between">
+      <%= link_to "Rate #{@comedian.name} and leave a review", new_comedian_review_path(@comedian), class: 'submit-button btn btn-danger' %>
+      <%= link_to "Edit #{@comedian.name}", edit_comedian_path(@comedian), class: 'submit-button btn btn-success' %>
+      <%= link_to "Delete #{@comedian.name}", comedian_path(@comedian), method: :delete, data: { confirm: "Are you sure?" }, class: 'submit-button btn btn-success' %>
+      <%= link_to "Go back", root_path, class: 'submit-button btn btn-success' %>
     </div>
-    <li><% end %></li>
-    <li><%= link_to "Rate #{@comedian.name} and leave a review", new_comedian_review_path(@comedian) %></li>
-    <li><%= link_to "Edit #{@comedian.name}", edit_comedian_path(@comedian) %></li>
-    <li><%= link_to "Delete #{@comedian.name}", comedian_path(@comedian), method: :delete, data: { confirm: "Are you sure?" } %></li>
-    <li><%= link_to "Go back", root_path %></li>
-</ul>
+  </div>
+</div>
