getting close to the final product, comedian page design has improved a lot

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -2,11 +2,18 @@
 }
 
 .form {
-    margin: 40px auto;
-    width: 100%;
-    font-weight: bolder;
+  margin: 5em auto;
+  width: 43.75em;
+  font-weight: bolder;
     .submit-button {
         color: white;
         font-weight: bold;
     }
 }
+
+
+
+// .chat-submit {
+//   margin-left: -3.8%;
+//   padding: 5px 10px;
+// }
