--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,7 +2,7 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
-@import "hero";
+@import "banner";
 @import "form";
 @import "card";
 @import "ratings";
