--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -24,6 +24,7 @@
 .navbar-lewagon {
     justify-content: space-between;
     background-color: $darkpurple;
+    height: 9.2vh;
   }
 
   .navbar-lewagon .navbar-collapse {
