--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -3,7 +3,7 @@
 }
 
 #sidebar {
-  background-color: rgb(222, 230, 105);
+  background-color: rgb(228, 81, 34);
   padding-top: 106px;
   height: 100vh;
   width: 0px;
@@ -22,10 +22,10 @@
     font-family: Roboto;
     font-weight: bold;
     color: white;
-    text-shadow: -1px 0.5px 1.5px grey, 0.5px 1px 2.5px grey, 1px 0.5px 2.5px grey, 0.5px -1px 2.5px grey;
+    // text-shadow: -1px 0.5px 1.5px grey, 0.5px 1px 2.5px grey, 1px 0.5px 2.5px grey, 0.5px -1px 2.5px grey;
     margin-left: -300px;
     li:hover {
-      background-color: rgb(152, 155, 85);
+      background-color: darkred;
     }
   }
   img {
