--- a/app/views/components/_banner.html.erb
+++ b/app/views/components/_banner.html.erb
@@ -3,4 +3,11 @@
     <h1>Welcome all freaks to Chuckletown</h1>
     <h4>Change your life by hiring the most outrageous, ridiculously brilliant comedians from Gotham City</h4>
   </div>
+  <div class="hero-scroll">
+    <a href="#" class="scroll-down">
+      <div class="arrow">
+        <span></span>
+      </div>
+    </a>
+  </div>
 </div>
