--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <div class="search-bar col-6 mr-auto">
-    <% if controller_name == 'comedians' && action_name == 'index' %>
+    <% if controller_name == 'pages' && action_name == 'home' %>
     <%= render 'components/search-bar' %>
     <% end %>
   </div>
