--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,7 +3,10 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 500px;
+    height: 100vh - $navbar-height - $box-shadow-banner-height;
+    // height: 810px;
+    // height: 85vh;
+    box-shadow: 0px 60px 2px darkgrey;
     align-content: center;
     .container {
         width: 100%;
@@ -19,4 +22,4 @@
     h4 {
         font-size: 25px;
     }
-} 
+}
