--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,4 +4,31 @@
         list-style-type: none;
         color: $coolgrey;
     }
+    background-color: white;
 }
+
+
+.header-picture {
+  background-image: url("header-picture.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 1em 1em 0 0;
+  height: 18vh;
+  padding: 0px;
+  margin-bottom: 10em;
+    .profile-photo {
+      border-radius: 1em;
+      margin-top: 5em;
+      // display:block;
+      // margin: 2em auto; -> to center
+      margin-left: 2em;
+    }
+}
+
+.booking-info {
+  padding: 0 2em 0 0;
+  h4 {
+  text-align: center;
+  }
+}
+
