--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,3 +11,82 @@
         color: white;
     }
 }
+
+
+.hero-left {
+  justify-content: flex-end;
+  background-color: lightpink;
+}
+
+.hero-right {
+  background-color: lightpink;
+}
+
+
+.scroll-down {
+  position: absolute;
+  bottom: 1.5rem;
+  left: 50%;
+  transform: translate(-50%);
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+}
+
+.arrow span {
+  width: 1.5rem;
+  height: 1.5em;
+  border: 3px solid transparent;
+  display: block;
+  border-right-color: #fff;
+  border-bottom-color: #fff;
+  transform: rotate(45deg);
+}
+
+
+.scroll-down .red {
+  position: absolute;
+  bottom: 1.5rem;
+  left: 50%;
+  transform: translate(-50%);
+};
+
+
+.arrow-red span {
+  width: 1.5rem;
+  height: 1.5em;
+  border: 3px solid transparent;
+  display: block;
+  border-right-color: $darkpurple;
+  border-bottom-color: $darkpurple;
+  transform: rotate(45deg);
+}
+
+.arrow-bottom span {
+  width: 1.5rem;
+  height: 1.5em;
+  border: 3px solid transparent;
+  display: block;
+  border-right-color: $darkpurple;
+  border-bottom-color: $darkpurple;
+  transform: rotate(225deg);
+}
+
+
+// .mouse {
+//   width: 2.5rem;
+//   height: 5rem;
+//   border-radius: 2rem;
+//   border: 2px solid white;
+//   display: flex;
+//   span {
+//     width: 1rem;
+//     height: 1rem;
+//     border-radius: 50%;
+//     background-color: #fff;
+//     display: block;
+//     margin: auto;
+//   }
+// }
+
+
