--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -1,14 +1,16 @@
-<div class="form-container">
-  <div class="form col-6 p-4" >
+<!-- <div class="form-container"> -->
+  <div class="form" >
     <%= simple_form_for [@comedian, @booking] do |f| %>
-      <div class="d-flex">
+      <div class="d-flex justify-content-between">
         <%= f.input :start_date, as: :datetime, html5: true, order: %i(day month year), label: "From" %>
         <%= f.input :end_date, as: :datetime, html5: true, order: %i(day month year), label: "To" %>
       </div>
-        <%= f.submit "Book #{@comedian.name}", class: 'submit-button btn btn-danger ml-2' %>
+      <div class="d-flex justify-content-end">
+        <%= f.submit "Book #{@comedian.name}", class: 'submit-button btn btn-danger mr-2' %>
+      </div>
     <% end %>
   </div>
-</div>
+<!-- </div> -->
 
 
 <!--  <div class="form-group">
