--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,6 @@
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
@@ -18,7 +16,7 @@
       <%= render "components/sidebar" %>
       <div id="content">
         <%= render "components/navbar" %>
-        <% if controller_name = 'comedians' && action_name == 'index' %>
+        <% if controller_name = 'pages' && action_name == 'home' %>
           <%= render "components/banner" %>
         <% end %>
         <%= yield %>
