--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,21 +1,36 @@
 .comedian-page {
-    li, a {
+    li, p {
         text-decoration: none;
         list-style-type: none;
         color: $coolgrey;
+        font-size: 18px;
+        font-weight: bold;
+        font-family: Roboto;
+    }
+    a {
+        text-decoration: none;
+        list-style-type: none;
+        color: white;
+        font-weight: bold;
     }
     background-color: white;
 }
 
+span {
+  color: $darkpurple;
+}
 
 .header-picture {
   background-image: url("header-picture.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 1em 1em 0 0;
-  height: 18vh;
+  height: 25vh;
   padding: 0px;
-  margin-bottom: 10em;
+  margin-bottom: 5em;
+  color: white;
+  text-align: center;
+  vertical-align: middle;
     .profile-photo {
       border-radius: 1em;
       margin-top: 5em;
@@ -23,9 +38,20 @@
       // margin: 2em auto; -> to center
       margin-left: 2em;
     }
+    h4 {
+      padding-top: 12vh;
+      padding-bottom: 12vh;
+      padding-right: 3vh;
+      padding-left: 3vh;
+      // line-height: 25vh;
+      // height: 25vh;
+      margin: 0 auto;
+    }
 }
 
 .booking-info {
+  max-width: none;
+  height: 30vh;
   padding: 0 2em 0 0;
   h4 {
   text-align: center;
