--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -7,5 +7,7 @@
 @import "card";
 @import "ratings";
 @import "flip-card";
-@import "sidebar"
+@import "sidebar";
+@import "tabs";
+@import "buttons"
 
