--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -6,7 +6,7 @@
         <%= f.input :end_date, as: :datetime, html5: true, order: %i(day month year), label: "To" %>
       </div>
       <div class="d-flex justify-content-end">
-        <%= f.submit "Book #{@comedian.name}", class: 'submit-button btn btn-danger mr-2' %>
+        <%= f.submit "Book #{@comedian.name}", class: 'submit-button btn btn-success mr-2' %>
       </div>
     <% end %>
   </div>
