--- a/app/views/comedians/_form.html.erb
+++ b/app/views/comedians/_form.html.erb
@@ -7,8 +7,8 @@
       <%= f.input :address %>
       <%= f.input :photo, as: :file %>
       <div class="d-flex justify-content-between">
-        <%= f.submit 'Bring your funny persona into this world', class: "submit-button btn btn-danger" %>
-        <%= link_to "Go back", comedians_path(@comedian), class: "submit-button btn btn-success"%>
+        <%= f.submit 'Bring your funny persona into this world', class: "submit-button btn btn-success" %>
+        <%= link_to "Go back", :back, class: "submit-button btn btn-danger"%>
       </div>
     <% end %>
   </div>
