--- a/app/views/comedians/_map.html.erb
+++ b/app/views/comedians/_map.html.erb
@@ -1,6 +1,7 @@
 <% if @comedian.address.present? %>
+<p><span>Location: </span><%= @comedian.address %></p>
   <div id="map"
-       style="width: 100%; height: 300px;"
+       style="width: 100%; height: 150px;"
        data-markers="<%= @markers.to_json %>"
        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
