added a general chatroom with a link in sidebar

--- a/app/views/components/_sidebar.html.erb
+++ b/app/views/components/_sidebar.html.erb
@@ -10,8 +10,8 @@
       <%= link_to comedians_path do %>
         <li>OUR COMEDIANS</li>
       <% end %>
-      <%= link_to root_path do %>
-        <li>CALENDAR</li>
+      <%= link_to general_channel_chatrooms_path do %>
+        <li>CHATROOM</li>
       <% end %>
     </div>
     <div class="sidebar-comics">
