--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,6 +17,10 @@
                           required: true,
                           autofocus: true,
                           input_html: { autocomplete: "last_name" }%>
+              <%= f.input :nickname,
+                          required: true,
+                          autofocus: true,
+                          input_html: { autocomplete: "nickname" }%>
             </div>
             <div class="inline">
             <%= f.input :role,
