--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,15 +13,50 @@
 }
 
 
-.hero-left {
-  justify-content: flex-end;
-  background-color: lightpink;
+.hero .bubble, .hero-picture {
+  position: relative;
 }
 
-.hero-right {
-  background-color: lightpink;
+.hero-picture {
+  filter: blur(15px) saturate(1);
 }
 
+.hero-picture:hover {
+  filter: blur(0px);
+  box-shadow: 0 30px 40px rgba(0,0,0,.1);
+  border: lightpink;
+}
+
+.hero::before {
+  content: "";
+  background-image: url('explosion.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  opacity: 0.9;
+  filter: saturate(2);
+}
+
+.text-body {
+  align-content: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: white;
+  // background-color: lightpink;
+  padding: 5vw;
+}
+
+.text-body h1 {
+  font-size: 2.5rem;
+  color: black;
+  padding: 0.5rem;
+}
 
 .scroll-down {
   position: absolute;
@@ -88,5 +123,4 @@
 //     margin: auto;
 //   }
 // }
-
 
