--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -3,6 +3,6 @@
     <span><%= message.user.nickname %></span>
     <small><%= message.created_at.strftime("%a %b %e at %l:%M%p") %></small>
   </i>
-  <p><%= emojify message.content %></p>
+  <p><%= message.content %></p>
 </div>
 
